updated User entity